--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -312,7 +312,33 @@
       "dnaRequirement": "# DNA",
       "carnivore": "Carnivore",
       "herbivore": "Herbivore",
-      "omnivore": "Omnivore"
+      "omnivore": "Omnivore",
+      "trait": {
+        "brontosaurus": "GENTLE GIANT: OPEN SPACES ARE A VALID HABITAT. RAMPAGES IF PLACED IN A PEN, OR IF ANOTHER SPECIES ENTERS OR OCCUPIES ITS OPEN SPACE.",
+        "tyrannosaurus": "DESTRUCTIVE: ROLL TWO DICE DURING A RAMPAGE CHECK, AND SUFFER BOTH RESULTS CONSECUTIVELY.",
+        "ankylosaurus": "DEFENSIVE: CAN SHARE A HABITAT WITH ANY SPECIES WITHOUT EITHER RAMPAGING.",
+        "pterodactyl": "FLIGHT: MUST BE HOUSED IN A BIODOME TO FULFILL ITS HABITAT REQUIREMENT.",
+        "stegosaurus": "CROWD PLEASER: DURING THE UPKEEP PHASE, GAIN 1 CREDIT.",
+        "raptor": "CLEVER: DURING A RAMPAGE CHECK, IN ADDITION TO NORMAL DAMAGE, SUFFER ONE VISITOR FATALITY ON A /// RESULT.",
+        "triceratops": "HERD ANIMAL: GAIN AN ADDITIONAL 1 VP IN DINOSAUR VALUE FOR EVERY TWO TRICERATOPS IN A SHARED PEN.",
+        "mutant": "MONSTROUS: EXISTING MUTANTS MAY EACH BE FED 🐐🐐 ONCE PER UPKEEP PHASE TO PLACE AN ADDITIONAL MUTANT INTO YOUR PARK.",
+        "gallimimus": "SIMPLE GENOME: DNA REQUIREMENT IS 1 WHILE YOU HAVE AT LEAST ONE GALLIMIMUS IN YOUR PARK.",
+        "ichthyosaur": "SWIMMING PARTNER: WHEN PLACED, IMMEDIATELY GAIN 4 CREDITS.",
+        "therizinosaurus": "TREE HARVESTER: GAIN AN ADDITIONAL 3 VP PER SEASON IF THE THERIZINOSAURUS IS IN A HABITAT OF 4+ SPACES.",
+        "plesiosaurus": "SIMPLE FEEDER: DOES NOT REQUIRE FEEDING DURING THE UPKEEP PHASE.",
+        "megalodon": "LEVIATHAN: WHEN PLACED, IMMEDIATELY GAIN 6 VP.",
+        "mosasaur": "TERROR: DURING UPKEEP, YOU MAY DESTROY A DINOSAUR IN YOUR PARK TO IGNORE FEEDING A MOSASAUR. IF YOU DO, IMMEDIATELY GAIN 5 VP.",
+        "spinosaurus": "AQUATIC HUNTER: DESTROY ONE DINOSAUR IN YOUR PARK WHEN PLACED OR RESOLVE AN UPKEEP DIE CHECK.",
+        "parasaurolophus": "PLEASING HARMONICS: DURING FINAL SCORING, GAIN AN ADDITIONAL 1 VP FOR EACH SPECIES, INCLUDING THIS ONE, THAT YOU HAVE IN YOUR PARK.",
+        "dimetrodon": "BEACH DWELLER: WHEN PLACED, IMMEDIATELY GAIN 2 VP FOR EACH DIRECTLY ADJACENT (NOT DIAGONAL) AQUATIC HABITAT TILE.",
+        "dreadnoughtus": "AWE-INSPIRING: REPUTATION IS EQUAL TO THE CURRENT SEASON NUMBER. REQUIRES AT LEAST TWO ADJACENT OPEN SPACES FOR A VALID HABITAT AND CAN NEVER BE PENNED.",
+        "pachycephalosaurus": "DESTRUCTIVE ENTERTAINMENT: AT START OF UPKEEP, IF ITS HABITAT BORDERS ANOTHER SPECIES’ HABITAT (EXCEPT OPEN SPACE) RESOLVE A RAMPAGE CHECK AND GAIN 3VP.",
+        "quetzalcoatlus": "",
+        "compsognathus": "",
+        "carnotaurus": "",
+        "dunkleosteus": "",
+        "dilophosaurus": ""      
+      }
     }
   },
   "difficultyLevel": {
