--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -314,26 +314,25 @@
       "herbivore": "Herbivore",
       "omnivore": "Omnivore",
       "trait": {
-        "brontosaurus": "GENTLE GIANT: OPEN SPACES ARE A VALID HABITAT. RAMPAGES IF PLACED IN A PEN, OR IF ANOTHER SPECIES ENTERS OR OCCUPIES ITS OPEN SPACE.",
-        "tyrannosaurus": "DESTRUCTIVE: ROLL TWO DICE DURING A RAMPAGE CHECK, AND SUFFER BOTH RESULTS CONSECUTIVELY.",
-        "ankylosaurus": "DEFENSIVE: CAN SHARE A HABITAT WITH ANY SPECIES WITHOUT EITHER RAMPAGING.",
-        "pterodactyl": "FLIGHT: MUST BE HOUSED IN A BIODOME TO FULFILL ITS HABITAT REQUIREMENT.",
-        "stegosaurus": "CROWD PLEASER: DURING THE UPKEEP PHASE, GAIN 1 CREDIT.",
-        "raptor": "CLEVER: DURING A RAMPAGE CHECK, IN ADDITION TO NORMAL DAMAGE, SUFFER ONE VISITOR FATALITY ON A /// RESULT.",
-        "triceratops": "HERD ANIMAL: GAIN AN ADDITIONAL 1 VP IN DINOSAUR VALUE FOR EVERY TWO TRICERATOPS IN A SHARED PEN.",
-        "mutant": "MONSTROUS: EXISTING MUTANTS MAY EACH BE FED 🐐🐐 ONCE PER UPKEEP PHASE TO PLACE AN ADDITIONAL MUTANT INTO YOUR PARK.",
-        "gallimimus": "SIMPLE GENOME: DNA REQUIREMENT IS 1 WHILE YOU HAVE AT LEAST ONE GALLIMIMUS IN YOUR PARK.",
-        "ichthyosaur": "SWIMMING PARTNER: WHEN PLACED, IMMEDIATELY GAIN 4 CREDITS.",
-        "therizinosaurus": "TREE HARVESTER: GAIN AN ADDITIONAL 3 VP PER SEASON IF THE THERIZINOSAURUS IS IN A HABITAT OF 4+ SPACES.",
-        "plesiosaurus": "SIMPLE FEEDER: DOES NOT REQUIRE FEEDING DURING THE UPKEEP PHASE.",
-        "megalodon": "LEVIATHAN: WHEN PLACED, IMMEDIATELY GAIN 6 VP.",
-        "mosasaur": "TERROR: DURING UPKEEP, YOU MAY DESTROY A DINOSAUR IN YOUR PARK TO IGNORE FEEDING A MOSASAUR. IF YOU DO, IMMEDIATELY GAIN 5 VP.",
-        "spinosaurus": "AQUATIC HUNTER: DESTROY ONE DINOSAUR IN YOUR PARK WHEN PLACED OR RESOLVE AN UPKEEP DIE CHECK.",
-        "parasaurolophus": "PLEASING HARMONICS: DURING FINAL SCORING, GAIN AN ADDITIONAL 1 VP FOR EACH SPECIES, INCLUDING THIS ONE, THAT YOU HAVE IN YOUR PARK.",
-        "dimetrodon": "BEACH DWELLER: WHEN PLACED, IMMEDIATELY GAIN 2 VP FOR EACH DIRECTLY ADJACENT (NOT DIAGONAL) AQUATIC HABITAT TILE.",
-        "dreadnoughtus": "AWE-INSPIRING: REPUTATION IS EQUAL TO THE CURRENT SEASON NUMBER. REQUIRES AT LEAST TWO ADJACENT OPEN SPACES FOR A VALID HABITAT AND CAN NEVER BE PENNED.",
-        "pachycephalosaurus": "DESTRUCTIVE ENTERTAINMENT: AT START OF UPKEEP, IF ITS HABITAT BORDERS ANOTHER SPECIES’ HABITAT (EXCEPT OPEN SPACE) RESOLVE A RAMPAGE CHECK AND GAIN 3VP.",
-        "quetzalcoatlus": "",
+        "brontosaurus": "<b>Gentle Giant:</b> Open spaces are a valid habitat. Rampages if placed in a pen, or if another species enters or occupies its open space.",
+        "tyrannosaurus": "<b>Destructive:</b> Roll two dice during a rampage check, and suffer both results consecutively.",
+        "ankylosaurus": "<b>Defensive:</b> Can share a habitat with any species without either rampaging.",
+        "pterodactyl": "<b>Flight:</b> Must be housed in a biodome to fulfill its habitat requirement.",
+        "stegosaurus": "<b>Crowd Pleaser:</b> During the upkeep phase, gain 1 credit.",
+        "raptor": "<b>Clever:</b> During a rampage check, in addition to normal damage, suffer one visitor fatality on a /// result.",
+        "triceratops": "<b>Herd Animal:</b> Gain an additional 1 VP in dinosaur value for every two triceratops in a shared pen.",
+        "mutant": "<b>Monstrous:</b> Existing mutants may each be fed 🐐🐐 once per upkeep phase to place an additional mutant into your park.",
+        "gallimimus": "<b>Simple Genome:</b> DNA requirement is 1 while you have at least one gallimimus in your park.",
+        "ichthyosaur": "<b>Swimming Partner:</b> When placed, immediately gain 4 credits.",
+        "therizinosaurus": "<b>Tree Harvester:</b> Gain an additional 3 VP per season if the therizinosaurus is in a habitat of 4+ spaces.",
+        "plesiosaurus": "<b>Simple Feeder:</b> Does not require feeding during the upkeep phase.",
+        "megalodon": "<b>Leviathan:</b> When placed, immediately gain 6 VP.",
+        "mosasaur": "<b>Terror:</b> During upkeep, you may destroy a dinosaur in your park to ignore feeding a mosasaur. If you do, immediately gain 5 VP.",
+        "spinosaurus": "<b>Aquatic Hunter:</b> Destroy one dinosaur in your park when placed or resolve an upkeep die check.",
+        "parasaurolophus": "<b>Pleasing Harmonics:</b> During final scoring, gain an additional 1 VP for each species, including this one, that you have in your park.",
+        "dimetrodon": "<b>Beach Dweller:</b> When placed, immediately gain 2 VP for each directly adjacent (not diagonal) aquatic habitat tile.",
+        "dreadnoughtus": "<b>Awe-Inspiring:</b> Reputation is equal to the current season number. Requires at least two adjacent open spaces for a valid habitat and can never be penned.",
+        "pachycephalosaurus": "<b>Destructive Entertainment:</b> At start of upkeep, if its habitat borders another species’ habitat (except open space) resolve a rampage check and gain 3VP.",        "quetzalcoatlus": "",
         "compsognathus": "",
         "carnotaurus": "",
         "dunkleosteus": "",
