small layout improvements

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -314,25 +314,25 @@
       "herbivore": "Herbivore",
       "omnivore": "Omnivore",
       "trait": {
-        "brontosaurus": "<b>Gentle Giant:</b> Open spaces are a valid habitat. Rampages if placed in a pen, or if another species enters or occupies its open space.",
-        "tyrannosaurus": "<b>Destructive:</b> Roll two dice during a rampage check, and suffer both results consecutively.",
-        "ankylosaurus": "<b>Defensive:</b> Can share a habitat with any species without either rampaging.",
-        "pterodactyl": "<b>Flight:</b> Must be housed in a biodome to fulfill its habitat requirement.",
-        "stegosaurus": "<b>Crowd Pleaser:</b> During the upkeep phase, gain 1 credit.",
-        "raptor": "<b>Clever:</b> During a rampage check, in addition to normal damage, suffer one visitor fatality on a /// result.",
-        "triceratops": "<b>Herd Animal:</b> Gain an additional 1 VP in dinosaur value for every two triceratops in a shared pen.",
-        "mutant": "<b>Monstrous:</b> Existing mutants may each be fed 🐐🐐 once per upkeep phase to place an additional mutant into your park.",
-        "gallimimus": "<b>Simple Genome:</b> DNA requirement is 1 while you have at least one gallimimus in your park.",
-        "ichthyosaur": "<b>Swimming Partner:</b> When placed, immediately gain 4 credits.",
-        "therizinosaurus": "<b>Tree Harvester:</b> Gain an additional 3 VP per season if the therizinosaurus is in a habitat of 4+ spaces.",
-        "plesiosaurus": "<b>Simple Feeder:</b> Does not require feeding during the upkeep phase.",
-        "megalodon": "<b>Leviathan:</b> When placed, immediately gain 6 VP.",
-        "mosasaur": "<b>Terror:</b> During upkeep, you may destroy a dinosaur in your park to ignore feeding a mosasaur. If you do, immediately gain 5 VP.",
-        "spinosaurus": "<b>Aquatic Hunter:</b> Destroy one dinosaur in your park when placed or resolve an upkeep die check.",
-        "parasaurolophus": "<b>Pleasing Harmonics:</b> During final scoring, gain an additional 1 VP for each species, including this one, that you have in your park.",
-        "dimetrodon": "<b>Beach Dweller:</b> When placed, immediately gain 2 VP for each directly adjacent (not diagonal) aquatic habitat tile.",
-        "dreadnoughtus": "<b>Awe-Inspiring:</b> Reputation is equal to the current season number. Requires at least two adjacent open spaces for a valid habitat and can never be penned.",
-        "pachycephalosaurus": "<b>Destructive Entertainment:</b> At start of upkeep, if its habitat borders another species’ habitat (except open space) resolve a rampage check and gain 3VP.",        "quetzalcoatlus": "",
+        "brontosaurus": "Gentle Giant: Open spaces are a valid habitat. Rampages if placed in a pen, or if another species enters or occupies its open space.",
+        "tyrannosaurus": "Destructive: Roll two dice during a rampage check, and suffer both results consecutively.",
+        "ankylosaurus": "Defensive: Can share a habitat with any species without either rampaging.",
+        "pterodactyl": "Flight: Must be housed in a biodome to fulfill its habitat requirement.",
+        "stegosaurus": "Crowd Pleaser: During the upkeep phase, gain 1 credit.",
+        "raptor": "Clever: During a rampage check, in addition to normal damage, suffer one visitor fatality on a /// result.",
+        "triceratops": "Herd Animal: Gain an additional 1 VP in dinosaur value for every two triceratops in a shared pen.",
+        "mutant": "Monstrous: Existing mutants may each be fed 🐐🐐 once per upkeep phase to place an additional mutant into your park.",
+        "gallimimus": "Simple Genome: DNA requirement is 1 while you have at least one gallimimus in your park.",
+        "ichthyosaur": "Swimming Partner: When placed, immediately gain 4 credits.",
+        "therizinosaurus": "Tree Harvester: Gain an additional 3 VP per season if the therizinosaurus is in a habitat of 4+ spaces.",
+        "plesiosaurus": "Simple Feeder: Does not require feeding during the upkeep phase.",
+        "megalodon": "Leviathan: When placed, immediately gain 6 VP.",
+        "mosasaur": "Terror: During upkeep, you may destroy a dinosaur in your park to ignore feeding a mosasaur. If you do, immediately gain 5 VP.",
+        "spinosaurus": "Aquatic Hunter: Destroy one dinosaur in your park when placed or resolve an upkeep die check.",
+        "parasaurolophus": "Pleasing Harmonics: During final scoring, gain an additional 1 VP for each species, including this one, that you have in your park.",
+        "dimetrodon": "Beach Dweller: When placed, immediately gain 2 VP for each directly adjacent (not diagonal) aquatic habitat tile.",
+        "dreadnoughtus": "Awe-Inspiring: Reputation is equal to the current season number. Requires at least two adjacent open spaces for a valid habitat and can never be penned.",
+        "pachycephalosaurus": "Destructive Entertainment: At start of upkeep, if its habitat borders another species’ habitat (except open space) resolve a rampage check and gain 3VP.",        "quetzalcoatlus": "",
         "compsognathus": "",
         "carnotaurus": "",
         "dunkleosteus": "",
